--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -110,6 +110,11 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install Python 2
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python2
+
     - name: Install FDB client
       run: |
         sudo apt-get update
