Force older python

--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -126,6 +126,7 @@ jobs:
         git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
         cd YCSB/foundationdb
         mvn clean package -DskipTests
+        sed -i '1s/python/python2/' YCSB/bin/ycsb
         
         # Verify build
         ls -lh target/foundationdb-binding-*.jar
