--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -126,7 +126,6 @@ jobs:
         git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
         cd YCSB/foundationdb
         mvn clean package -DskipTests
-        sed -i '1s/python/python2/' YCSB/bin/ycsb
         
         # Verify build
         ls -lh target/foundationdb-binding-*.jar
@@ -134,6 +133,7 @@ jobs:
     - name: Run Workload F
       run: |
         cd YCSB
+        sed -i '1s/python/python2/' ./bin/ycsb
         ./bin/ycsb load foundationdb -s -P workloads/workloadF \
           -p foundationdb.clusterfile=../fdb.cluster
         
