--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -94,52 +94,45 @@ jobs:
 
   foundationdb-workloadf:
     runs-on: ubuntu-22.04
-    services:
-      foundationdb:
-        image: foundationdb/foundationdb:7.1.53
-        ports:
-          - 4500:4500
-        env:
-          FDB_CLUSTER_FILE: /etc/foundationdb/fdb.cluster
-        volumes:
-          - ./fdb.cluster:/etc/foundationdb/fdb.cluster
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Python 2
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python2
+      - name: Install Python 2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python2
 
-    - name: Install FDB client
-      run: |
-        sudo apt-get update
-        curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-clients_7.1.53-1_amd64.deb
-        sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
+      - name: Install FoundationDB server and client
+        run: |
+          sudo apt-get update
+          curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-server_7.1.53-1_amd64.deb
+          curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-clients_7.1.53-1_amd64.deb
+          sudo dpkg -i foundationdb-server_7.1.53-1_amd64.deb
+          sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
 
-    - name: Build YCSB FDB binding
-      run: |
-        git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
-        cd YCSB/foundationdb
-        mvn clean package -DskipTests
-        
-        # Verify build
-        ls -lh target/foundationdb-binding-*.jar
+      - name: Start and configure FoundationDB
+        run: |
+          sudo systemctl start foundationdb
+          sudo fdbcli --exec "configure new single memory"
+          sleep 5
 
-    - name: Run Workload F
-      run: |
-        cd YCSB
-        sed -i '1s/python/python2/' ./bin/ycsb
-        ./bin/ycsb load foundationdb -s -P workloads/workloadf \
-          -p foundationdb.clusterfile=../fdb.cluster
-        
-        ./bin/ycsb run foundationdb -s -P workloads/workloadf \
-          -p foundationdb.clusterfile=../fdb.cluster \
-          -p foundationdb.keyprefix=test
+      - name: Copy cluster file to workspace
+        run: |
+          sudo cp /etc/foundationdb/fdb.cluster .
+
+      - name: Build YCSB FDB binding
+        run: |
+          git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
+          cd YCSB/foundationdb
+          mvn clean package -DskipTests
+
+      - name: Run Workload F
+        run: |
+          cd YCSB
+          sed -i '1s/python/python2/' ./bin/ycsb
+          ./bin/ycsb load foundationdb -s -P workloads/workloadf \
+            -p foundationdb.clusterfile=../
 
   compare-results:
     runs-on: ubuntu-22.04
