--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -111,9 +111,37 @@ jobs:
           sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
           sudo dpkg -i foundationdb-server_7.1.53-1_amd64.deb
 
-      - name: Start and configure FoundationDB
+      - name: Optimize FoundationDB configuration
         run: |
-          sudo systemctl start foundationdb
+          # Get number of available cores
+          CORES=$(nproc)
+          
+          # Calculate memory allocation (80% of available memory)
+          MEMORY=$(free -b | awk '/Mem:/ {printf "%d", $2 * 0.8}')
+          
+          # Generate optimized configuration
+          sudo tee /etc/foundationdb/foundationdb.conf > /dev/null <<EOL
+          [general]
+          restart_delay = 60
+          initial_reconnect_delay = 1
+          [fdbserver]
+          process_count = $CORES
+          listen_address = public
+          memory = $MEMORY
+          storage_memory = $((MEMORY / 2))
+          metrics_cluster = 
+          [backup_agent]
+          enabled = false
+          [simulation]
+          enabled = false
+          EOL
+
+          # Configure network options
+          sudo sysctl -w net.core.somaxconn=10000
+          sudo sysctl -w net.ipv4.tcp_max_syn_backlog=10000
+
+          # Restart FDB with new configuration
+          sudo systemctl restart foundationdb
           sleep 5
 
       - name: Copy cluster file to workspace
@@ -126,13 +154,22 @@ jobs:
           cd YCSB/foundationdb
           mvn clean package -DskipTests
 
-      - name: Run Workload F
+      - name: Run Workload F with optimized settings
         run: |
           cd YCSB
           sed -i '1s/python/python2/' ./bin/ycsb
-          ./bin/ycsb load foundationdb -s -P workloads/workloadf \
-            -p foundationdb.clusterfile=../fdb.cluster
           
+          # Load data with high concurrency
+          ./bin/ycsb load foundationdb -s -P workloads/workloadf \
+            -p foundationdb.clusterfile=../fdb.cluster \
+            -p foundationdb.concurrency=$(nproc) \
+            -threads $(nproc)
+          
+          # Run benchmark with maximum throughput settings
           ./bin/ycsb run foundationdb -s -P workloads/workloadf \
             -p foundationdb.clusterfile=../fdb.cluster \
-            -p foundationdb.keyprefix=test
+            -p foundationdb.keyprefix=test \
+            -p foundationdb.concurrency=$(nproc) \
+            -p foundationdb.max_retries=100 \
+            -p foundationdb.transaction_timeout=60000 \
+            -threads $(nproc)
