--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -17,6 +17,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          postgres -c max_worker_processes=1 -c max_parallel_workers=0 -c max_parallel_workers_per_gather=0
 
     steps:
       - name: Checkout code
@@ -92,82 +93,85 @@ jobs:
             -p jdbc.autocommit=true \
             -p db.batchsize=1000
 
-  foundationdb-workloadf:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+# Modified foundationdb-workloadf job
+foundationdb-workloadf:
+  runs-on: ubuntu-22.04
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Install Python 2
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python2
+    - name: Install Python 2
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python2
 
-      - name: Install FoundationDB server and client
-        run: |
-          sudo apt-get update
-          curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-server_7.1.53-1_amd64.deb
-          curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-clients_7.1.53-1_amd64.deb
-          sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
-          sudo dpkg -i foundationdb-server_7.1.53-1_amd64.deb
+    - name: Install FoundationDB server and client
+      run: |
+        sudo apt-get update
+        curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-server_7.1.53-1_amd64.deb
+        curl -LO https://github.com/apple/foundationdb/releases/download/7.1.53/foundationdb-clients_7.1.53-1_amd64.deb
+        sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
+        sudo dpkg -i foundationdb-server_7.1.53-1_amd64.deb
 
-      - name: Optimize FoundationDB configuration
-        run: |
-          # Get number of available cores
-          CORES=$(nproc)
-          
-          # Calculate memory allocation (80% of available memory)
-          MEMORY=$(free -b | awk '/Mem:/ {printf "%d", $2 * 0.8}')
-          
-          # Generate optimized configuration
-          sudo tee /etc/foundationdb/foundationdb.conf > /dev/null <<EOL
-          [general]
-          restart_delay = 60
-          initial_reconnect_delay = 1
-          [fdbserver.1]
-          process_count = $CORES
-          listen_address = public
-          memory = $MEMORY
-          storage_memory = $((MEMORY / 2))
-          metrics_cluster = 
-          [fdbserver.2]
-          process_count = $CORES
-          listen_address = public
-          memory = $MEMORY
-          storage_memory = $((MEMORY / 2))
-          metrics_cluster = 
-          [backup_agent]
-          enabled = false
-          [simulation]
-          enabled = false
-          EOL
+    - name: Optimize FoundationDB configuration
+      run: |
+        # Get number of available cores
+        CORES=$(nproc)
+        
+        # Calculate memory allocation (80% of available memory)
+        MEMORY=$(free -b | awk '/Mem:/ {printf "%d", $2 * 0.8}')
+        
+        # Generate optimized configuration
+        sudo tee /etc/foundationdb/foundationdb.conf > /dev/null <<EOL
+        [general]
+        restart_delay = 60
+        initial_reconnect_delay = 1
+        [fdbserver]
+        process_count = $CORES
+        listen_address = public
+        memory = $MEMORY
+        storage_memory = $((MEMORY / 2))
+        metrics_cluster = 
+        [backup_agent]
+        enabled = false
+        [simulation]
+        enabled = false
+        EOL
 
-      - name: Copy cluster file to workspace
-        run: |
-          sudo cp /etc/foundationdb/fdb.cluster .
+        # Configure network options
+        sudo sysctl -w net.core.somaxconn=10000
+        sudo sysctl -w net.ipv4.tcp_max_syn_backlog=10000
 
-      - name: Build YCSB FDB binding
-        run: |
-          git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
-          cd YCSB/foundationdb
-          mvn clean package -DskipTests
+        # Restart FDB with new configuration
+        sudo systemctl restart foundationdb
+        sleep 5
 
-      - name: Run Workload F with optimized settings
-        run: |
-          cd YCSB
-          sed -i '1s/python/python2/' ./bin/ycsb
-          
-          # Load data with high concurrency
-          ./bin/ycsb load foundationdb -s -P workloads/workloadf \
-            -p foundationdb.clusterfile=../fdb.cluster \
-            -p foundationdb.concurrency=$(nproc) \
-            -threads $(nproc)
-          
-          # Run benchmark with maximum throughput settings
-          ./bin/ycsb run foundationdb -s -P workloads/workloadf \
-            -p foundationdb.clusterfile=../fdb.cluster \
-            -p foundationdb.keyprefix=test \
-            -p foundationdb.concurrency=$(nproc) \
-            -p foundationdb.max_retries=100 \
-            -p foundationdb.transaction_timeout=60000 \
-            -threads $(nproc)
+    - name: Copy cluster file to workspace
+      run: |
+        sudo cp /etc/foundationdb/fdb.cluster .
+
+    - name: Build YCSB FDB binding
+      run: |
+        git clone --branch 0.17.0 --depth 1 https://github.com/brianfrankcooper/YCSB.git
+        cd YCSB/foundationdb
+        mvn clean package -DskipTests
+
+    - name: Run Workload F with optimized settings
+      run: |
+        cd YCSB
+        sed -i '1s/python/python2/' ./bin/ycsb
+        
+        # Load data with high concurrency
+        ./bin/ycsb load foundationdb -s -P workloads/workloadf \
+          -p foundationdb.clusterfile=../fdb.cluster \
+          -p foundationdb.concurrency=$(nproc) \
+          -threads $(nproc)
+        
+        # Run benchmark with maximum throughput settings
+        ./bin/ycsb run foundationdb -s -P workloads/workloadf \
+          -p foundationdb.clusterfile=../fdb.cluster \
+          -p foundationdb.keyprefix=test \
+          -p foundationdb.concurrency=$(nproc) \
+          -p foundationdb.max_retries=100 \
+          -p foundationdb.transaction_timeout=60000 \
+          -threads $(nproc)
