--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -140,3 +140,97 @@ jobs:
             -p foundationdb.max_retries=100 \
             -p foundationdb.transaction_timeout=60000 \
             -threads $(nproc)
+
+  cockroachdb-workloadf:
+    runs-on: ubuntu-22.04
+    services:
+      cockroach:
+        image: cockroachdb/cockroach:v22.1.21
+        ports:
+          - 26257:26257
+          - 8080:8080
+        options: >-
+          --health-cmd "curl -f http://localhost:8080/health?ready=1 || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Install Python 2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python2
+
+      - name: Download YCSB and PostgreSQL JDBC driver
+        run: |
+          wget https://github.com/brianfrankcooper/YCSB/releases/download/0.17.0/ycsb-0.17.0.tar.gz
+          tar xfvz ycsb-0.17.0.tar.gz
+          sed -i '1s/python/python2/' ycsb-0.17.0/bin/ycsb
+          wget -P ycsb-0.17.0/lib/ https://jdbc.postgresql.org/download/postgresql-42.6.0.jar
+
+      - name: Install CockroachDB CLI
+        run: |
+          curl https://binaries.cockroachdb.com/cockroach-v22.1.21.linux-amd64.tgz | tar -xz
+          sudo cp cockroach-v22.1.21.linux-amd64/cockroach /usr/local/bin/
+          cockroach version
+
+      - name: Create workload configuration
+        run: |
+          mkdir -p workloads
+          cat > ./workloads/workloadf <<EOL
+          workload=site.ycsb.workloads.CoreWorkload
+          readallfields=true
+          readproportion=0.5
+          updateproportion=0.5
+          scanproportion=0
+          insertproportion=0
+          requestdistribution=zipfian
+          recordcount=100000
+          operationcount=100000
+          fieldcount=3
+          fieldlength=100
+          EOL
+
+      - name: Create database and table
+        run: |
+          cockroach sql --insecure --host=localhost:26257 -e "CREATE DATABASE IF NOT EXISTS ycsb;"
+          cockroach sql --insecure --host=localhost:26257 -d ycsb -e \
+            "CREATE TABLE IF NOT EXISTS usertable (
+              ycsb_key VARCHAR(255) PRIMARY KEY,
+              field0 TEXT,
+              field1 TEXT,
+              field2 TEXT
+            );"
+
+      - name: Load initial data
+        run: |
+          cd ycsb-0.17.0
+          ./bin/ycsb load jdbc -s -P ../workloads/workloadf \
+            -p db.driver=org.postgresql.Driver \
+            -p db.url="jdbc:postgresql://localhost:26257/ycsb?sslmode=disable" \
+            -p db.user=root \
+            -p db.passwd="" \
+            -p jdbc.fetchsize=10 \
+            -p jdbc.autocommit=true \
+            -p db.batchsize=1000
+
+      - name: Run Workload F
+        run: |
+          cd ycsb-0.17.0
+          ./bin/ycsb run jdbc -s -P ../workloads/workloadf \
+            -p db.driver=org.postgresql.Driver \
+            -p db.url="jdbc:postgresql://localhost:26257/ycsb?sslmode=disable" \
+            -p db.user=root \
+            -p db.passwd="" \
+            -p jdbc.fetchsize=10 \
+            -p jdbc.autocommit=true \
+            -p db.batchsize=1000
