--- a/.github/workflows/compare-pg-vs-fdb.yaml
+++ b/.github/workflows/compare-pg-vs-fdb.yaml
@@ -154,6 +154,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          start-single-node --insecure
 
     steps:
       - name: Checkout code
