Add multi-core configuration for FoundationDB setup

--- a/.github/workflows/fdb.yaml
+++ b/.github/workflows/fdb.yaml
@@ -21,6 +21,26 @@ jobs:
           sudo dpkg -i foundationdb-clients_7.1.53-1_amd64.deb
           sudo dpkg -i foundationdb-server_7.1.53-1_amd64.deb
 
+      - name: Configure FoundationDB for multi-core
+        run: |
+          CORES=$(nproc)
+          echo "Number of cores detected: $CORES"
+          echo "Configuring FoundationDB to use $CORES server processes."
+          # This sed command finds a line starting with optional '#' and spaces,
+          # then 'processes', then optional spaces around '=', and any value.
+          # It replaces that entire line with 'processes = $CORES'.
+          # This handles cases where the line is commented out or already active.
+          sudo sed -i -E "s/^[# ]*processes[ ]*=[ ]*.*/processes = $CORES/" /etc/foundationdb/foundationdb.conf
+          
+          echo "Verifying FoundationDB configuration (grep for 'processes' in /etc/foundationdb/foundationdb.conf):"
+          sudo grep "processes" /etc/foundationdb/foundationdb.conf || echo "'processes' line not found or not updated in /etc/foundationdb/foundationdb.conf"
+
+          echo "Restarting FoundationDB service..."
+          sudo systemctl restart foundationdb
+          
+          echo "Waiting 10 seconds for FoundationDB to stabilize after restart..."
+          sleep 10
+
       - name: Copy cluster file to workspace
         run: |
           sudo cp /etc/foundationdb/fdb.cluster .
