Define version 0.1.0-dev1 and update workflow to trigger on tags

--- a/.github/workflows/fdb.yaml
+++ b/.github/workflows/fdb.yaml
@@ -1,6 +1,8 @@
 name: foundationdb-workloadf
 on:
   push:
+    tags:
+      - '*'
 jobs:
   foundationdb-workloadf:
     runs-on: ubuntu-22.04
@@ -72,4 +74,3 @@ jobs:
         with:
           name: foundationdb-results-workloadf
           path: foundationdb_results_workloadf.txt
-
