--- a/.github/workflows/database-workloads.yaml
+++ b/.github/workflows/database-workloads.yaml
@@ -1,7 +1,8 @@
 name: database-workloads
 on:
-  pull_request:
-    branches: [main]
+  push:
+    tags:
+      - '*'
 
 jobs:
   workloads:
@@ -96,8 +97,6 @@ jobs:
         if: matrix.database == 'pg'
         run: |
           sudo apt-get install -y postgresql postgresql-contrib
-          sudo systemctl start postgresql
-          sleep 5
           sudo -u postgres createuser -d ycsb
           sudo -u postgres createdb ycsb
           sudo -u postgres psql -c "ALTER USER ycsb PASSWORD 'password';"
@@ -108,6 +107,8 @@ jobs:
               field1 TEXT,
               field2 TEXT
             );"
+          sudo systemctl start postgresql
+          sleep 5
 
       - name: Load data and run workload
         run: |
